--- a/q2/index.html
+++ b/q2/index.html
@@ -20,8 +20,59 @@
                             <li class="listItem">Soul</li>
                             <li class="listItem">Head</li>
                         </ul>
-                        <button type="button"></button>
+                        <button type="button">ORDER NOW</button>
                     </div>
+                                        <div class="card">
+                        <h2 class="cTitle">title</h2>
+                        <h3 class="cPrice">price: </h3>
+                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <ul class="cList">
+                            <li class="listItem">Soul</li>
+                            <li class="listItem">Head</li>
+                        </ul>
+                        <button type="button">ORDER NOW</button>
+                    </div>
+                        <div class="card" id="bestCard">
+                        <h2 class="cTitle">title</h2>
+                        <h3 class="cPrice">price: </h3>
+                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <ul class="cList">
+                            <li class="listItem">Soul</li>
+                            <li class="listItem">Head</li>
+                        </ul>
+                        <button type="button">ORDER NOW</button>
+                    </div>
+                                                            <div class="card">
+                        <h2 class="cTitle">title</h2>
+                        <h3 class="cPrice">price: </h3>
+                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <ul class="cList">
+                            <li class="listItem">Soul</li>
+                            <li class="listItem">Head</li>
+                        </ul>
+                        <button type="button">ORDER NOW</button>
+                    </div>
+                                                            <div class="card">
+                        <h2 class="cTitle">title</h2>
+                        <h3 class="cPrice">price: </h3>
+                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <ul class="cList">
+                            <li class="listItem">Soul</li>
+                            <li class="listItem">Head</li>
+                        </ul>
+                        <button type="button">ORDER NOW</button>
+                    </div>
+                                                            <div class="card">
+                        <h2 class="cTitle">title</h2>
+                        <h3 class="cPrice">price: </h3>
+                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <ul class="cList">
+                            <li class="listItem">Soul</li>
+                            <li class="listItem">Head</li>
+                        </ul>
+                        <button type="button">ORDER NOW</button>
+                    </div>
+
             </section>
             <section class="supportSection">
                 <p>call us</p>
