--- a/q3/index.html
+++ b/q3/index.html
@@ -5,13 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link rel="stylesheet" href="/q3/style.css"/>
+    <script src="/q3/script.js"defer></script>
     </head>
     <body>
         <header>
 
         </header>
         <main>
-            
+            <section class="formSection">
+                <div class="formInput">
+                    <label for="">Enter </label>
+                    <input type="text" id="" class="" placeholder=""/>
+                </div>
+                                <div class="formInput">
+                    <label for="">Enter </label>
+                    <input type="text" id="" class="" placeholder=""/>
+                </div>
+                                <div class="formInput">
+                    <label for="">Enter </label>
+                    <input type="text" id="" class="" placeholder=""/>
+                </div>
+                    <div class="formInput">
+                    <p> Enter </p>
+                    <label>closed</label>
+                    <input type="checkbox" name="mailBoxStatus" value="closed"/>
+                    <label>open</label>
+                    <input type="checkbox" name="mailBoxStatus" value="open"/>
+                </div>
+                    <div class="formInput">
+                    <label for="">Enter </label>
+                    <input type="text" id="" class="" placeholder=""/>
+                </div>
+                    <div class="formInput">
+                    <label for="">Enter </label>
+                    <select id="userType" name="userType">
+                        <option value="human">human</option>
+                        <option value="cat">cat</option>
+                        <option value="dog">dog</option>
+                    </select>
+                </div>
+            </section>
         </main>
+        
     </body>
 </html>
