--- a/q3/index.html
+++ b/q3/index.html
@@ -5,47 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link rel="stylesheet" href="/q3/style.css"/>
-    <script src="/q3/script.js"defer></script>
     </head>
     <body>
         <header>
 
         </header>
         <main>
-            <section class="formSection">
-                <div class="formInput">
-                    <label for="">Enter </label>
-                    <input type="text" id="" class="" placeholder=""/>
-                </div>
-                                <div class="formInput">
-                    <label for="">Enter </label>
-                    <input type="text" id="" class="" placeholder=""/>
-                </div>
-                                <div class="formInput">
-                    <label for="">Enter </label>
-                    <input type="text" id="" class="" placeholder=""/>
-                </div>
+            <section id="formSection">
+          <form id="form">
                     <div class="formInput">
-                    <p> Enter </p>
-                    <label>closed</label>
-                    <input type="checkbox" name="mailBoxStatus" value="closed"/>
-                    <label>open</label>
-                    <input type="checkbox" name="mailBoxStatus" value="open"/>
-                </div>
+                        <label for="boxID">Mail Box ID: </label>
+                        <input type="text" id="boxID" class="" placeholder="111"/>
+                    </div>
                     <div class="formInput">
-                    <label for="">Enter </label>
-                    <input type="text" id="" class="" placeholder=""/>
-                </div>
+                        <label for="boxColor">Mail Box Color: </label>
+                        <input type="text" id="boxColor" class="" placeholder="red"/>
+                    </div>
                     <div class="formInput">
-                    <label for="">Enter </label>
-                    <select id="userType" name="userType">
-                        <option value="human">human</option>
-                        <option value="cat">cat</option>
-                        <option value="dog">dog</option>
-                    </select>
+                        <label for="toneOfVoice">Tone Of Voice: </label>
+                        <select id="toneOfVoice" name="toneOfVoice">
+                            <option value="Furius">Furius</option>
+                            <option value="Polite">Polite</option>
+                            <option value="Mild">Mild</option>
+                        </select>
+                    </div>
+                    <div class="formInput">
+                        <label for="mailAmount">Mail Amount</label>
+                        <input type="text" id="mailAmount" class="" placeholder="10"/>
+                    </div>
+                        <div class="formInput">
+                        <p>Is Mail Box Closed</p>
+                        <label>closed</label>
+                        <input type="radio" name="mailBoxStatus" value="closed" checked/>
+                        <label>open</label>
+                        <input type="radio" name="mailBoxStatus" value="open"/>
+                    </div>
+                        <div class="formInput">
+                        <label for="userType">User Type</label>
+                        <select id="userType" name="userType">
+                            <option value="human">human</option>
+                            <option value="cat">cat</option>
+                            <option value="dog">dog</option>
+                        </select>
+                    </div>
+                    <div class="formInput">
+                        <label for="emaiAddress">Email Address</label>
+                        <input type="text" id="emaiAddress" class="" placeholder=""/>
+                    </div>
                 </div>
+                <button type="submit" id="submitBtn">submit</button>
+                <p id="errorMessage"></p>
+          </form>
+            </section>
+            <section id="complaintSection">
+
             </section>
         </main>
-        
+            <script src="/q3/script.js"defer></script>
+
     </body>
 </html>
