Q3A2 functions reset, load, save, render, find id

--- a/q3/index.html
+++ b/q3/index.html
@@ -36,7 +36,7 @@
                         <div class="formInput">
                         <p>Is Mail Box Closed</p>
                         <label>closed</label>
-                        <input type="radio" name="mailBoxStatus" value="closed" checked/>
+                        <input type="radio" id="closed" name="mailBoxStatus" value="closed" checked/>
                         <label>open</label>
                         <input type="radio" name="mailBoxStatus" value="open"/>
                     </div>
@@ -49,19 +49,18 @@
                         </select>
                     </div>
                     <div class="formInput">
-                        <label for="emaiAddress">Email Address</label>
-                        <input type="text" id="emaiAddress" class="" placeholder=""/>
+                        <label for="emailAddress">Email Address</label>
+                        <input type="text" id="emailAddress" class="" placeholder=""/>
                     </div>
                 </div>
                 <button type="submit" id="submitBtn">submit</button>
                 <p id="errorMessage"></p>
           </form>
+          <a href="view.html">go to list</a>
             </section>
-            <section id="complaintSection">
 
-            </section>
         </main>
-            <script src="/q3/script.js"defer></script>
+            <script src="/q3/script.js" defer></script>
 
     </body>
 </html>
