Q3A2 added filtration function and implimented

--- a/q3/view.html
+++ b/q3/view.html
@@ -11,7 +11,15 @@
 
         </header>
         <main>
-
+            <div class="filterConainer">
+                <label for="filterTone">Filter by rudeness</label>
+                <select id="filterTone">
+                    <option value="All">All</option>
+                    <option value="Furius">Furius</option>
+                    <option value="Polite">Polite</option>
+                    <option value="Mild">Mild</option>
+                </select>
+            </div>
             <section id="complaintSection">
 
             </section>
