ALL CSS ALL content

--- a/q2/index.html
+++ b/q2/index.html
@@ -3,84 +3,91 @@
     <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>Telepathy Kits: Brain Needs Break!</title>
     <link rel="stylesheet" href="/q2/style.css"/>
     </head>
     <body>
         <header>
-
+            <h1>Telepathy Kits: Brain Needs Break!</h1>
         </header>
         <main>
             <section class="cardSection">
                     <div class="card">
-                        <h2 class="cTitle">title</h2>
-                        <h3 class="cPrice">price: </h3>
-                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <h2 class="cTitle">Basic Package</h2>
+                        <h3 class="cPrice">Price: $50 per month</h3>
+                        <h4 class="cBenifits">Benefits: Not just for studying.</h4>
                         <ul class="cList">
-                            <li class="listItem">Soul</li>
-                            <li class="listItem">Head</li>
+                            <li class="listItem">Simple words: "I'm hungry".</li>
+                            <li class="listItem">Accidental roommate telepathy.</li>
+                            <li class="listItem">Subtly hint: need nap.</li>
                         </ul>
                         <button type="button">ORDER NOW</button>
                     </div>
                                         <div class="card">
-                        <h2 class="cTitle">title</h2>
-                        <h3 class="cPrice">price: </h3>
-                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <h2 class="cTitle">Mid-Semester Meltdown Edition</h2>
+                        <h3 class="cPrice">Price: $70 per month</h3>
+                        <h4 class="cBenifits">Benefits: Panic, but with style.</h4>
                         <ul class="cList">
-                            <li class="listItem">Soul</li>
-                            <li class="listItem">Head</li>
+                            <li class="listItem">Emotions, tweets.</li>
+                            <li class="listItem">Worry about assignment.</li>
+                            <li class="listItem">Silent screams into friend's mind.</li>
                         </ul>
                         <button type="button">ORDER NOW</button>
                     </div>
                         <div class="card" id="bestCard">
-                        <h2 class="cTitle">title</h2>
-                        <h3 class="cPrice">price: </h3>
-                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                        <h2 class="cTitle">Astral All-Nighter Premium</h2>
+                        <h3 class="cPrice">Price: $100 per month</h3>
+                        <h4 class="cBenifits">Benefits: Sleep? What is sleep?</h4>
                         <ul class="cList">
-                            <li class="listItem">Soul</li>
-                            <li class="listItem">Head</li>
+                            <li class="listItem">Inter-dimensional shared dreams.</li>
+                            <li class="listItem">Attend lectures in your dreams.</li>
+                            <li class="listItem">Project exhaustion onto other people.</li>
                         </ul>
                         <button type="button">ORDER NOW</button>
                     </div>
-                                                            <div class="card">
-                        <h2 class="cTitle">title</h2>
-                        <h3 class="cPrice">price: </h3>
-                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                                         <div class="card">
+                        <h2 class="cTitle">Deadline Whisperer Package</h2>
+                        <h3 class="cPrice">Price: $90 per month</h3>
+                        <h4 class="cBenifits">Benefits: No more last minute!</h4>
                         <ul class="cList">
-                            <li class="listItem">Soul</li>
-                            <li class="listItem">Head</li>
+                            <li class="listItem">Nudge past self: Start earlier.</li>
+                            <li class="listItem">Clarity before total collapse.</li>
+                            <li class="listItem">Find misplaced study notes fast.</li>
                         </ul>
                         <button type="button">ORDER NOW</button>
                     </div>
-                                                            <div class="card">
-                        <h2 class="cTitle">title</h2>
-                        <h3 class="cPrice">price: </h3>
-                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                                         <div class="card">
+                        <h2 class="cTitle">Finals Survival Kit</h2>
+                        <h3 class="cPrice">Price: $130 per month</h3>
+                        <h4 class="cBenifits">Benefits: Power-up for exams.</h4>
                         <ul class="cList">
-                            <li class="listItem">Soul</li>
-                            <li class="listItem">Head</li>
+                            <li class="listItem">Absorb textbook info.</li>
+                            <li class="listItem">Subconscious pleas for more coffee.</li>
+                            <li class="listItem">Find empty study rooms now.</li>
                         </ul>
                         <button type="button">ORDER NOW</button>
                     </div>
-                                                            <div class="card">
-                        <h2 class="cTitle">title</h2>
-                        <h3 class="cPrice">price: </h3>
-                        <h4 class="cBenifits">Benifits include but are not limited to:</h4>
+                                         <div class="card">
+                        <h2 class="cTitle">Post-Exam Amnesia Package</h2>
+                        <h3 class="cPrice">Price: $40 per month</h3>
+                        <h4 class="cBenifits">Benefits: Forget everything painful.</h4>
                         <ul class="cList">
-                            <li class="listItem">Soul</li>
-                            <li class="listItem">Head</li>
+                            <li class="listItem">Wipe exam stress.</li>
+                            <li class="listItem">Forget lost sleep, blissful ignorance.</li>
+                            <li class="listItem">Final grade? Who cares?</li>
                         </ul>
                         <button type="button">ORDER NOW</button>
                     </div>
 
             </section>
             <section class="supportSection">
-                <p>call us</p>
+                <p>24/7 Mental Support: Answers all existential crises.</p>
             </section>
         </main>
 
             <footer>
                 <button type="button">UPGRADE NOW</button>
+                <p>Ultimate Consciousness Expansion! Deep soul level. Trust me, you need this.</p>
             </footer>
     </body>
 </html>
