--- a/q1/index.html
+++ b/q1/index.html
@@ -4,50 +4,139 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airport Flight Board</title>
-    <link rel="stylesheet" href="/q1/style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/q1/style.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         <header>
-
+            <h1>All flights aboard</h1>
         </header>
         <main>
-            <section class="cardSection container">
-                <h1>outgoing</h1>
-                <div  class="row">
+            <section class="container">
+                <h1>Outgoing Flights</h1>
+                <div class="row g-3">
                     <div class="flightCard col-12 col-md-6 col-lg-3">
                         <h2 class="flightDes">
-                            Amsterdam
+                            London
                         </h2>
                         <h3 class="flightTime">
-                            04:20
+                            10:00 AM
                         </h3>
                         <p class="flightNum">
-                            JK6742
+                            BA245
                         </p>
-                        <img src="images/placeholder.jpg" alt="Flight destination" class="desImg d-none d-md-block"/>
+                        <img src="/q1/images/london.jfif" alt="London city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
-                            B20
+                            A12
                         </p>
                     </div> 
                     <div class="flightCard col-12 col-md-6 col-lg-3">
                         <h2 class="flightDes">
-
+                            New York
                         </h2>
                         <h3 class="flightTime">
-
+                            11:30 AM
                         </h3>
                         <p class="flightNum">
-
+                            UA001
                         </p>
-                        <img src="images/placeholder.jpg" alt="Flight destination" class="desImg d-none d-md-block"/>
+                        <img src="/q1/images/NYC.jfif" alt="New York city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
-                            gate num
+                            C05
                         </p>
                     </div> 
-            </div>
-
+                    <div class="flightCard col-12 col-md-6 col-lg-3">
+                        <h2 class="flightDes">
+                            Paris
+                        </h2>
+                        <h3 class="flightTime">
+                            01:00 PM
+                        </h3>
+                        <p class="flightNum">
+                            AF789
+                        </p>
+                        <img src="/q1/images/Paris.jfif" alt="Paris city" class="desImg d-none d-md-block"/>
+                        <p class="gateNum">
+                            B03
+                        </p>
+                    </div> 
+                    <div class="flightCard col-12 col-md-6 col-lg-3">
+                        <h2 class="flightDes">
+                            Tokyo
+                        </h2>
+                        <h3 class="flightTime">
+                            03:45 PM
+                        </h3>
+                        <p class="flightNum">
+                            JL123
+                        </p>
+                        <img src="/q1/images/Tokyo.jfif" alt="Tokyo city" class="desImg d-none d-md-block"/>
+                        <p class="gateNum">
+                            D10
+                        </p>
+                    </div> 
+                    <div class="flightCard col-12 col-md-6 col-lg-3">
+                        <h2 class="flightDes">
+                            Dubai
+                        </h2>
+                        <h3 class="flightTime">
+                            05:15 PM
+                        </h3>
+                        <p class="flightNum">
+                            EK456
+                        </p>
+                        <img src="/q1/images/Dubai.jfif" alt="Dubai city" class="desImg d-none d-md-block"/>
+                        <p class="gateNum">
+                            F07
+                        </p>
+                    </div> 
+                    <div class="flightCard col-12 col-md-6 col-lg-3">
+                        <h2 class="flightDes">
+                            Rome
+                        </h2>
+                        <h3 class="flightTime">
+                            06:30 PM
+                        </h3>
+                        <p class="flightNum">
+                            AZ987
+                        </p>
+                        <img src="/q1/images/Rome.jfif" alt="Rome city" class="desImg d-none d-md-block"/>
+                        <p class="gateNum">
+                            E01
+                        </p>
+                    </div> 
+                    <div class="flightCard col-12 col-md-6 col-lg-3">
+                        <h2 class="flightDes">
+                            Sydney
+                        </h2>
+                        <h3 class="flightTime">
+                            08:00 PM
+                        </h3>
+                        <p class="flightNum">
+                            QF777
+                        </p>
+                        <img src="/q1/images/Sydney.jfif" alt="Sydney city" class="desImg d-none d-md-block"/>
+                        <p class="gateNum">
+                            G15
+                        </p>
+                    </div> 
+                    <div class="flightCard col-12 col-md-6 col-lg-3">
+                        <h2 class="flightDes">
+                            Berlin
+                        </h2>
+                        <h3 class="flightTime">
+                            09:45 PM
+                        </h3>
+                        <p class="flightNum">
+                            LH321
+                        </p>
+                        <img src="/q1/images/Berlin.jfif" alt="Berlin city" class="desImg d-none d-md-block"/>
+                        <p class="gateNum">
+                            H08
+                        </p>
+                    </div> 
+                </div>
             </section>
         </main>
     </body>
