--- a/q1/index.html
+++ b/q1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Airport Flight Board</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
@@ -26,7 +26,7 @@
                         <p class="flightNum">
                             BA245
                         </p>
-                        <img src="/images/london.jfif" alt="London city" class="desImg d-none d-md-block"/>
+                        <img src="images/london.jfif" alt="London city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             A12
                         </p>
@@ -41,7 +41,7 @@
                         <p class="flightNum">
                             UA001
                         </p>
-                        <img src="/images/NYC.jfif" alt="New York city" class="desImg d-none d-md-block"/>
+                        <img src="images/NYC.jfif" alt="New York city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             C05
                         </p>
@@ -56,7 +56,7 @@
                         <p class="flightNum">
                             AF789
                         </p>
-                        <img src="/images/Paris.jfif" alt="Paris city" class="desImg d-none d-md-block"/>
+                        <img src="images/Paris.jfif" alt="Paris city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             B03
                         </p>
@@ -71,7 +71,7 @@
                         <p class="flightNum">
                             JL123
                         </p>
-                        <img src="/images/Tokyo.jfif" alt="Tokyo city" class="desImg d-none d-md-block"/>
+                        <img src="images/Tokyo.jfif" alt="Tokyo city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             D10
                         </p>
@@ -86,7 +86,7 @@
                         <p class="flightNum">
                             EK456
                         </p>
-                        <img src="/images/Dubai.jfif" alt="Dubai city" class="desImg d-none d-md-block"/>
+                        <img src="images/Dubai.jfif" alt="Dubai city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             F07
                         </p>
@@ -101,7 +101,7 @@
                         <p class="flightNum">
                             AZ987
                         </p>
-                        <img src="/images/Rome.jfif" alt="Rome city" class="desImg d-none d-md-block"/>
+                        <img src="images/Rome.jfif" alt="Rome city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             E01
                         </p>
@@ -116,7 +116,7 @@
                         <p class="flightNum">
                             QF777
                         </p>
-                        <img src="/images/Sydney.jfif" alt="Sydney city" class="desImg d-none d-md-block"/>
+                        <img src="images/Sydney.jfif" alt="Sydney city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             G15
                         </p>
@@ -131,7 +131,7 @@
                         <p class="flightNum">
                             LH321
                         </p>
-                        <img src="/images/Berlin.jfif" alt="Berlin city" class="desImg d-none d-md-block"/>
+                        <img src="images/Berlin.jfif" alt="Berlin city" class="desImg d-none d-md-block"/>
                         <p class="gateNum">
                             H08
                         </p>
