--- a/q3/index.html
+++ b/q3/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <header>
@@ -60,7 +60,7 @@
             </section>
 
         </main>
-            <script src="/q3/script.js" defer></script>
+            <script src="script.js" defer></script>
 
     </body>
 </html>
